2004-09-16  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b195

	* Change: Make orphaned items links to the item.  This will allow
	  users to view the album they're re-attaching (or the parent), 
	  as well as the images they're about to delete.

2004-09-16  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b194

	* Fix: view_album now honors the 'Email me when' form

	* Fix: watermark_album de-globalized

2004-09-16  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b193

	* Add: Flesh out the findOrphanedImages(), add deleteOrphanedImages()

	* Change:  find_orphans can now identify and delete orphaned images
	  which were the result of a failed upload, or other catastrophic issue.
	  For some users, this could clear up a lot of space.

2004-09-15  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b192

	* Fix: Use of dirname(dirname()) in setup was incorrect.  GALLERY_BASE
	  should be used instead, due to Debian.

	* Change: Rename findOrphans() to findOrphanedAlbums()

	* Add: Stub function for findOrphanedImages() in find_orphans.php

2004-09-14  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b191

	* Fix: Change 'delete' to 'deleteButton' to prevent the JS errors
	  onsubmit

2004-09-15  Jens A. Tkotz <jens@peino.de>  1.4.5-cvs-b190

	* Fix:  Added putenv("LC_ALL" ...) in lib/lang.php to fix problems on FreeBSD 4.10

2004-09-12  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b189

	* Change: HTML cleanup

	* Change: Move the adminOptions form tags inside the table, and apply the necessary 
	  CSS (margin-bottom:0px) so that IE displays it correctly.
	
	* Change: Applied form CSS in a couple other locations to try and unify IE/Mozilla

	* Fix: Remove duplicated globals call from breadcrumb.inc

2004-09-11  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b188

	* Add: Add support for 'Coral', a peer-to-peer webcache to init.php
	  http://gallery.menalto.com/index.php?name=PNphpBB2&file=viewtopic&p=94428#94428
