@@ -30,7 +30,7 @@ require(dirname(__FILE__) . '/init.php');
   <title><?php echo _("Add Photos") ?></title>
 </head>
 <frameset rows="100%, 0%" border=0 frameborder=0 framespacing=0>
-  <frame src="<?php echo makeGalleryUrl('add_photos.php', array('set_albumName' => $gallery->session->albumName)); ?>" noresize />
+  <frame src="<?php echo makeGalleryUrl('add_photos.php', array('set_albumName' => $gallery->session->albumName, "type" => "popup")); ?>" noresize />
   <frame name="hack" src="" noresize noscroll />
 </frameset>
 
