@@ -1,3 +1,7 @@
+2004-09-16  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b196
+
+	* Change: Modifications to make popup support better in Mambo
+
 2004-09-16  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b195
 
 	* Change: Make orphaned items links to the item.  This will allow
